--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,67 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 
 body{
+    background: green;
+}
+
+.play-regular {
+  font-family: "Play", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+.card{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 300px;
+    height: 500px;
+    margin: auto;   
     background: white;
+    border-radius: 10px;
+    margin-top: 20px;
+    border: 1px solid #000000;
+    box-shadow: #000000 0px 0px 20px;
+    text-align: center;
+}
+
+ .top_left{
+    display: flex;
+    justify-content: space-between;
+    color: #000000;
+    font-size: 100px;
+    margin-top: 5px;
+    margin-left: 10px;
+}
+
+ .valor{
+    font-size: 80px;
+    font-weight: bold;
+    /* color: #000000; */
+    justify-content: center;
+}
+
+ .buttom_right{
+    color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: end;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    font-size: 100px;
+}
+
+.diamante::after{
+   content:'♦'; color: #ff0000;
+}
+.corazon::after {
+   content:'♥'; color: #ff0000;
+}
+
+.picas::after {
+   content:'♠'; color: #000000;
+}
+
+.trebol::after {
+   content:'♣'; color: #000000;
 }
